@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor #ADD1B2
    ArrowColor #2A2A2A
    BorderColor #2A2A2A
}

abstract class Command {
  # parser: Parser
  # ui: Ui
  + execute() : void
}

class SearchInternshipCommand {
  - internshipList: InternshipList
  + execute() : void
}

class InternshipList {
  - internships: List<Internship>
  + getInternships() : List<Internship>
  + getSize() : int
}

class Internship {
  - title: String
  - companyName: String
  - status: ApplicationStatus
  + getCompanyName() : String
  + getTitle() : String
  + matches(keyword: String, field: String) : boolean
  + toString() : String
}

Command <|-- SearchInternshipCommand
SearchInternshipCommand --> "1" InternshipList
InternshipList o--> "many" Internship
@enduml